XLS_Interpreter/XLS_Traductor/src/Exprs/ExpParser.java
/* Generated By:JavaCC: Do not edit this line. ExpParser.java */
package Exprs;
import ManejoError.TError;
import java.util.ArrayList;
import Tablas.*;
import Abstract.*;
public class ExpParser implements ExpParserConstants {
        ArrayList<TError> errores;
        TablaSimbolos ts;
        String columna; //LA COLUMNA QUE ESTOY TRADUCIENDO
        String archivo; //ESTE SIEMPRE SERA ENCUESTA
        String idPreguntaActual;
        String idPadre;

        ArrayList<String> params;

        int type;

        String tipoCalcular = "";

        public void setUp(ArrayList<TError> errores, TablaSimbolos ts, String padre, String actual, String columna, String archivo, int tipo)
        {
                this.errores = errores;
                this.ts = ts;
                this.idPadre =padre;
                this.idPreguntaActual = actual;
                this.columna = columna;
                this.archivo = archivo;
                this.params = new ArrayList();
                this.type = tipo;
        }

        String devuelvemeID(String id)
        {
                String aux = id;
                aux = aux.replace("#[","");
                aux = aux.replace("]","");
                return aux;
        }

        public ArrayList<String> getParams()
        {
                return this.params;
        }

        public String getTipoCalcular()
        {
                return this.tipoCalcular;
        }

        String obtTipoAltoNivel(int tipo)
        {
                switch(tipo)
                {
                        case TipoPregunta.ENTERO:
                        {
                                return "Entero";
                        }
                        case TipoPregunta.TEXTO:
                        {
                                return "Cadena";
                        }
                        case TipoPregunta.DECIMAL:
                        {
                                return "Decimal";
                        }
                        case TipoPregunta.RANGO:
                        {
                                return "Entero";
                        }
                        case TipoPregunta.CONDICION:
                        {
                                return "Booelano";
                        }
                        case TipoPregunta.FECHA:
                        {
                                return "Fecha";
                        }
                        case TipoPregunta.HORA:
                        {
                                return "Hora";
                        }
                        case TipoPregunta.FECHAHORA:
                        {
                                return "FechaHora";
                        }
                        case TipoPregunta.SELEC_MULT:
                        {
                                return "Cadena";
                        }
                        case TipoPregunta.SELEC_UNO:
                        {
                                return "Cadena";
                        }
                        case TipoPregunta.NOTA:
                        {
                                return "Cadena";
                        }
                        case TipoPregunta.FICHERO:
                        {
                                return "Cadena";
                        }
                        case TipoPregunta.CALCULAR:
                        {
                                return "Decimal";
                        }
                }
                return "";
        }

  void skip_error_recovery(int kind, String archivo, String columna) throws ParseException {
        errores.add(new TError("Sintactico","Error en la columna: "+columna,columna,archivo));
        Token t;
        do {
        t = getNextToken();
                if(t.kind == 0){break;}
    } while (t.kind != 0);
  }

//GRAMARTICA
  final public void EMPTY() throws ParseException {
                //VACIO
                System.out.println("VACIO");
  }

  final public String S() throws ParseException {
        String cadena = "";
    try {
      cadena = E(cadena);
                        {if (true) return cadena;}
    } catch (ParseException e) {
                skip_error_recovery(0, this.archivo, this.columna);
                {if (true) return "";}
    }
    throw new Error("Missing return statement in function");
  }

/////////////////////////////////////E////////////////////////////////////////////////////////////////////////
  final public String E(String cadena) throws ParseException {
        String aux = "";
    try {
      cadena = T(cadena);
      cadena = EP1(cadena);
                        {if (true) return cadena;}
    } catch (ParseException e) {
                skip_error_recovery(0, this.archivo, this.columna);
                {if (true) return "";}
    }
    throw new Error("Missing return statement in function");
  }

  final public String EP(String cadena) throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case and:
        jj_consume_token(and);
                        cadena += "&&";
        cadena = T(cadena);
                         this.tipoCalcular = "Booelano";
                        {if (true) return cadena;}
        break;
      case or:
        jj_consume_token(or);
                       cadena += "||";
        cadena = T(cadena);
                        this.tipoCalcular = "Booelano";
                        {if (true) return cadena;}
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
                skip_error_recovery(0, this.archivo, this.columna);
                {if (true) return "";}
    }
    throw new Error("Missing return statement in function");
  }

  final public String EP1(String cadena) throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case and:
      case or:
        cadena = EP(cadena);
        cadena = EP1(cadena);
                         {if (true) return cadena;}
        break;
      default:
        jj_la1[1] = jj_gen;
        EMPTY();
                        {if (true) return cadena;}
      }
    } catch (ParseException e) {
                skip_error_recovery(0, this.archivo, this.columna);
                {if (true) return "";}
    }
    throw new Error("Missing return statement in function");
  }

/////////////////////////////////////////////////////////////////////////////////////////////////////////
///////////////////////T/////////////////////////////////////////////////////////////////////////////////
  final public String T(String cadena) throws ParseException {
    try {
      cadena = F(cadena);
      cadena = TP1(cadena);
                        {if (true) return cadena;}
    } catch (ParseException e) {
                skip_error_recovery(0, this.archivo, this.columna);
                {if (true) return "";}
    }
    throw new Error("Missing return statement in function");
  }

  final public String TP(String cadena) throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case igual:
        jj_consume_token(igual);
                         cadena += "==";
        cadena = F(cadena);
                        this.tipoCalcular = "Booelano";
                        {if (true) return cadena;}
        break;
      case diferente:
        jj_consume_token(diferente);
                              cadena += "!=";
        cadena = F(cadena);
                        this.tipoCalcular = "Booelano";
                        {if (true) return cadena;}
        break;
      case menor:
        jj_consume_token(menor);
                          cadena += "<";
        cadena = F(cadena);
                        this.tipoCalcular = "Booelano";
                        {if (true) return cadena;}
        break;
      case mayor:
        jj_consume_token(mayor);
                          cadena += ">";
        cadena = F(cadena);
                        this.tipoCalcular = "Booelano";
                        {if (true) return cadena;}
        break;
      case mayorigual:
        jj_consume_token(mayorigual);
                               cadena += ">=";
        cadena = F(cadena);
                        this.tipoCalcular = "Booelano";
                        {if (true) return cadena;}
        break;
      case menorigual:
        jj_consume_token(menorigual);
                               cadena += "<=";
        cadena = F(cadena);
                        this.tipoCalcular = "Booelano";
                        {if (true) return cadena;}
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
                skip_error_recovery(0, this.archivo, this.columna);
                {if (true) return "";}
    }
    throw new Error("Missing return statement in function");
  }

  final public String TP1(String cadena) throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case igual:
      case diferente:
      case mayor:
      case menor:
      case mayorigual:
      case menorigual:
        cadena = TP(cadena);
        cadena = TP1(cadena);
                        {if (true) return cadena;}
        break;
      default:
        jj_la1[3] = jj_gen;
        EMPTY();
                        {if (true) return cadena;}
      }
    } catch (ParseException e) {
                skip_error_recovery(0, this.archivo, this.columna);
                {if (true) return "";}
    }
    throw new Error("Missing return statement in function");
  }

///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
/////////////////////////////////////F/////////////////////////////////////////////////////////////////////////////////////
  final public String F(String cadena) throws ParseException {
    try {
      cadena = G(cadena);
      cadena = FP1(cadena);
                        {if (true) return cadena;}
    } catch (ParseException e) {
                skip_error_recovery(0, this.archivo, this.columna);
                {if (true) return "";}
    }
    throw new Error("Missing return statement in function");
  }

  final public String FP(String cadena) throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case mas:
        jj_consume_token(mas);
                       cadena += "+";
        cadena = G(cadena);
                        {if (true) return cadena;}
        break;
      case menos:
        jj_consume_token(menos);
                          cadena += "-";
        cadena = G(cadena);
                        {if (true) return cadena;}
        break;
      case por:
        jj_consume_token(por);
                         cadena += "*";
        cadena = G(cadena);
                        {if (true) return cadena;}
        break;
      case div:
        jj_consume_token(div);
                        cadena += "/";
        cadena = G(cadena);
                        {if (true) return cadena;}
        break;
      case pot:
        jj_consume_token(pot);
                        cadena += "^";
        cadena = G(cadena);
                        {if (true) return cadena;}
        break;
      case mod:
        jj_consume_token(mod);
                        cadena += "%";
        cadena = G(cadena);
                        {if (true) return cadena;}
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
                skip_error_recovery(0, this.archivo, this.columna);
                {if (true) return "";}
    }
    throw new Error("Missing return statement in function");
  }

  final public String FP1(String cadena) throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case mas:
      case menos:
      case por:
      case div:
      case mod:
      case pot:
        cadena = FP(cadena);
        cadena = FP1(cadena);
                        {if (true) return cadena;}
        break;
      default:
        jj_la1[5] = jj_gen;
        EMPTY();
                        {if (true) return cadena;}
      }
    } catch (ParseException e) {
                skip_error_recovery(0, this.archivo, this.columna);
                {if (true) return "";}
    }
    throw new Error("Missing return statement in function");
  }

//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//////////////////////////////////////////////G///////////////////////////////////////////////////////////////////////////////////
  final public String G(String cadena) throws ParseException {
        Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case identificador:
        t = jj_consume_token(identificador);
                        //AUN DEBO DE PENSAR EN LAS ACCIONES COMO DEBE DE SER
                        String aux = devuelvemeID(t.image);
                        if(this.type == 0)
                        {
                                if(this.ts.existeElemento(aux.toLowerCase()))
                                {
                                        //ACA SE HACE EL 
                                        Simbolo sim = this.ts.getSimbolo(aux);
                                        if(sim.getElemento() instanceof Pregunta)
                                        {
                                                Pregunta p = (Pregunta)sim.getElemento();//CASTEO A PREGUNTA
                                                String tipo = obtTipoAltoNivel(p.getTipo()); //OBTENGO EL TIPO
                                                this.params.add(tipo+" "+aux);//ANADO A LOS PARAMETROS QUE NECESITA LA PREGUNTA
                                                if(this.tipoCalcular.equals(""))
                                                {
                                                        this.tipoCalcular = tipo;
                                                }
                                                cadena += aux;
                                        }
                                }
                                else
                                {
                                        this.errores.add(new TError("Semantico", "Se hace referencia a una pregunta que no existe: "+aux,columna,archivo));
                                        cadena += "";
                                }
                        }
                        else
                        {
                                if(this.ts.existeElemento(aux.toLowerCase()))
                                {
                                        Simbolo  sim = this.ts.getSimbolo(aux);
                                        if(sim.getElemento() instanceof Pregunta)
                                        {
                                                Pregunta p = (Pregunta)sim.getElemento();//CASTEO A PREGUNTA

                                                if(this.tipoCalcular.equals(""))
                                                {
                                                        this.tipoCalcular = obtTipoAltoNivel(p.getTipo());
                                                }

                                                String pad = sim.getPadre();
                                                if(!pad.equals(""))
                                                {
                                                        pad +="().";
                                                }
                                                cadena += pad+aux+"().Respuesta";
                                        }
                                }
                                else
                                {
                                        this.errores.add(new TError("Semantico", "Se hace referencia a una pregunta que no existe: "+aux,columna,archivo));
                                        cadena += "";
                                }
                        }
                        {if (true) return cadena;}
        break;
      case entero:
        t = jj_consume_token(entero);
                        //ACCIONES
                        if(this.tipoCalcular.equals(""))
                        {
                                this.tipoCalcular = "Entero";
                        }
                        cadena += t.image;
                        {if (true) return cadena;}
        break;
      case decimal:
        t = jj_consume_token(decimal);
                        //ACCIONES
                        if(this.tipoCalcular.equals("") || this.tipoCalcular.equals("Entero"))
                        {
                                this.tipoCalcular = "Decimal";
                        }
                        cadena += t.image;
                        {if (true) return cadena;}
        break;
      case str1:
        t = jj_consume_token(str1);
                        //ACCIONES
                        cadena += t.image;
                        this.tipoCalcular = "Cadena";
                        {if (true) return cadena;}
        break;
      case str2:
        t = jj_consume_token(str2);
                        //ACCIONES
                        cadena += t.image;
                        this.tipoCalcular = "Cadena";
                        {if (true) return cadena;}
        break;
      case verdadero:
        t = jj_consume_token(verdadero);
                        //ACCIONES
                        cadena += t.image;
                        if(this.tipoCalcular.equals(""))
                        {
                                this.tipoCalcular = "Booelano";
                        }
                        {if (true) return cadena;}
        break;
      case falso:
        t = jj_consume_token(falso);
                        //ACCIONES
                        cadena += t.image;
                        if(this.tipoCalcular.equals(""))
                        {
                                this.tipoCalcular = "Booelano";
                        }
                        {if (true) return cadena;}
        break;
      case fecha:
        t = jj_consume_token(fecha);
                        //ACCIONES
                        cadena += "\u005c""+t.image+"\u005c"";
                        if(this.tipoCalcular.equals(""))
                        {
                                this.tipoCalcular = "Fecha";
                        }
                        {if (true) return cadena;}
        break;
      case fechahora:
        t = jj_consume_token(fechahora);
                        //ACCIONES
                        cadena += "\u005c'"+t.image+"\u005c'";
                        if(this.tipoCalcular.equals(""))
                        {
                                this.tipoCalcular = "FechaHora";
                        }
                        {if (true) return cadena;}
        break;
      case ahora:
        t = jj_consume_token(ahora);
                        cadena += t.image;
                        if(this.tipoCalcular.equals(""))
                        {
                                this.tipoCalcular = "Hora";
                        }
                        {if (true) return cadena;}
        break;
      case hoy:
        t = jj_consume_token(hoy);
                        cadena += t.image;
                        if(this.tipoCalcular.equals(""))
                        {
                                this.tipoCalcular = "Fecha";
                        }
                        {if (true) return cadena;}
        break;
      case hora:
        t = jj_consume_token(hora);
                        cadena += "\u005c'"+t.image+"\u005c'";
                        if(this.tipoCalcular.equals(""))
                        {
                                this.tipoCalcular = "Hora";
                        }
                        {if (true) return cadena;}
        break;
      case oPar:
        jj_consume_token(oPar);
                          cadena += "(";
        cadena = E(cadena);
        jj_consume_token(cPar);
                                                                     cadena +=")";
                        {if (true) return cadena;}
        break;
      case punto:
        jj_consume_token(punto);
                        if(this.type == 0)
                        {
                                //SOLO AGREGO EL ID DE LA PREGUNTA ACTUAL EN CUESTION EN ESTE CASO ES EL PARAM_1
                                cadena += this.idPreguntaActual;
                        }
                        else
                        {
                                if(!this.idPadre.equals(""))
                                {
                                        cadena += this.idPadre+"().";
                                }
                                cadena += this.idPreguntaActual+"().Respuesta";
                        }
                        {if (true) return cadena;}
        break;
      case not:
        jj_consume_token(not);
                         cadena += "!";
        cadena = E(cadena);
                        this.tipoCalcular = "Booelano";
                        {if (true) return cadena;}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
                skip_error_recovery(0, this.archivo, this.columna);
                {if (true) return"";}
    }
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public ExpParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[7];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xa000,0xa000,0x1f80,0x1f80,0x7e,0x7e,0xffe94000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x1,};
   }

  /** Constructor with InputStream. */
  public ExpParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ExpParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ExpParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }
